# iamwatching

./: README.md
v3/iamwatching/: README.md  iamwatching.spec  pyproject.toml  uninstall.sh
v3/iamwatching/checks/builtin/: cis_aws.yaml  iso27001.yaml  nist_csf.yaml  owasp_cloud.yaml  pci_dss.yaml
v3/iamwatching/daemon/: go.mod  main.go
v3/iamwatching/docs/: README.md  sample-cypher-queries.cypher  scanner-policy.json
v3/iamwatching/iamwatching/: __init__.py
v3/iamwatching/iamwatching.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
v3/iamwatching/iamwatching/cli/: main.py
v3/iamwatching/iamwatching/graph/: __init__.py  importer.py
v3/iamwatching/iamwatching/handshake/: __init__.py  verifier.py
v3/iamwatching/iamwatching/patterns/: __init__.py  matcher.py
v3/iamwatching/iamwatching/report/: __init__.py
v3/iamwatching/iamwatching/scanners/: aws_scanner.py  gcp_scanner.py
v3/iamwatching/tests/: test_aws_scanner.py
v4/iamwatching/: BUILD_PROMPT.md  deploy.sh  diagnose.sh  pyproject.toml  start.sh  stop.sh
v4/iamwatching/checks/builtin/: aws_compute_security.yaml  aws_data_security.yaml  azure_security.yaml  cis_aws.yaml  cross_cloud_normalization.yaml  custom_example.yaml  gcp_security.yaml  iso27001.yaml  nist_csf.yaml  owasp_cloud.yaml  pci_dss.yaml
v4/iamwatching/checks/custom/: README.md
v4/iamwatching/docker/: Dockerfile.auditor  Dockerfile.daemon  docker-compose.yml
v4/iamwatching/docs/: IamWatching-User-Manual.docx
v4/iamwatching/iamwatching.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
v4/iamwatching/iamwatching/cli/: main.py
v4/iamwatching/iamwatching/graph/: importer.py
v4/iamwatching/iamwatching/logging_module/: __init__.py  logger.py
v4/iamwatching/iamwatching/patterns/: matcher.py  registry.py  updater.py
v4/iamwatching/iamwatching/report/: pdf_report.py
v4/iamwatching/iamwatching/scanners/: __init__.py  _test_utils.py  aws_scanner.py  azure_scanner.py
v4/iamwatching/tests/: conftest.py  test_handshake.py  test_pattern_matcher.py
